# bdk_wallet

./: .gitignore  CHANGELOG.md  Cargo.toml  justfile
.github/workflows/: code_coverage.yml  cont_integration.yml  cron_cargo_mutants.yml  cron_daily_fuzz.yml
ci/: pin-msrv.sh
examples/: compiler.rs  electrum.rs  electrum_authenticated_server.rs  electrum_submit_package.rs  esplora_async.rs  esplora_blocking.rs  justfile  migration_from_pre_v1.rs  policy.rs
examples/common/: mod.rs
examples/example_wallet_electrum/: Cargo.toml
examples/example_wallet_electrum/src/: main.rs
examples/example_wallet_esplora_async/: Cargo.toml
examples/example_wallet_esplora_async/src/: main.rs
examples/example_wallet_esplora_blocking/: Cargo.toml
examples/example_wallet_esplora_blocking/src/: main.rs
examples/example_wallet_esplora_blocking_submit_package/: Cargo.toml
examples/example_wallet_esplora_blocking_submit_package/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bdk_wallet.rs  test.rs  wallet.rs  wallet_update.rs
fuzz/src/: bdk_wallet.rs  bdk_wallet_optimized.rs  fuzz_utils.rs  fuzzed_data_provider.rs  lib.rs  utils.rs
fuzz/src/types/: arbitrary_types.rs  arbitrary_types_optimized.rs  mod.rs
fuzz/write_seed/: .gitignore  Cargo.toml  README.md
fuzz/write_seed/src/: main.rs
src/: test_utils.rs  types.rs
src/descriptor/: dsl.rs  error.rs  mod.rs  policy.rs  template.rs
src/keys/: mod.rs
src/wallet/: changeset.rs  coin_selection.rs  error.rs  event.rs  export.rs  migration.rs  mod.rs  params.rs  persisted.rs  signer.rs  tx_builder.rs
tests/: add_foreign_utxo.rs  build_fee_bump.rs  descriptor_macro.rs  persisted_wallet.rs  psbt.rs  wallet.rs  wallet_event.rs
wallet/: Cargo.toml
wallet/examples/: policy.rs
wallet/src/: test_utils.rs
wallet/src/descriptor/: mod.rs  policy.rs
wallet/src/wallet/: export.rs  migration.rs  mod.rs  signer.rs  tx_builder.rs
wallet/tests/: persisted_wallet.rs  psbt.rs  wallet.rs  wallet_event.rs
