[package]
name = "bdk_wallet_fuzz"
homepage = "https://bitcoindevkit.org"
version = "0.0.1-alpha.0"
repository = "https://github.com/bitcoindevkit/bdk_wallet"
description = "A fuzz testing library for the Bitcoin Development Kit Wallet"
keywords = ["fuzz", "testing", "fuzzing", "bitcoin", "wallet"]
publish = false
readme = "README.md"
authors = ["Bitcoin Dev Kit Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bdk_wallet = { path = "../wallet" }

[[bin]]
name = "wallet"
path = "fuzz_targets/wallet.rs"
test = false
doc = false
bench = false

[[bin]]
name = "test"
path = "fuzz_targets/test.rs"
test = false
doc = false
bench = false
