[package]
name = "bdk_wallet_fuzz"
homepage = "https://bitcoindevkit.org"
version = "0.0.1-alpha.0"
repository = "https://github.com/bitcoindevkit/bdk_wallet"
description = "A fuzz testing library for the Bitcoin Development Kit Wallet"
keywords = ["fuzz", "testing", "fuzzing", "bitcoin", "wallet"]
publish = false
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Bitcoin Dev Kit Developers"]
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", optional = true }
arbitrary = { version = "1.4", features = ["derive"] }
bdk_wallet = { path = "../wallet", features = ["rusqlite"] }
afl = { version = "*", optional = true }
honggfuzz = { version = "0.5", optional = true }

[features]
libfuzzer_fuzz = ["libfuzzer-sys"]
honggfuzz_fuzz = ["honggfuzz"]
afl_fuzz = ["afl"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
debug-assertions = true
overflow-checks = true

[profile.dev]
panic = "abort"
opt-level = 1