[package]
name = "example_wallet_esplora_blocking_submit_package"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_wallet = { path = "../../wallet", features = ["rusqlite"] }
bdk_esplora = { version = "0.22.1", features = ["blocking"] }
esplora-client = { git = "https://github.com/oleonardolima/rust-esplora-client", branch = "submit-tx-pkg-clients", features = ["blocking"] }
anyhow = "1"
